@@ -1,2 +1,2 @@
 @echo off
-java -jar "%~dp0gizmosqlline.jar" %*
+java --add-opens=java.base/java.nio=ALL-UNNAMED -jar "%~dp0gizmosqlline.jar" %*
