@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-exec java -jar "$0" "$@"
+exec java --add-opens=java.base/java.nio=ALL-UNNAMED -jar "$0" "$@"
